@@ -2,3 +2,8 @@
 
 This is the registry of the polyclinic
 Used Java + MySQL
+
+--module-path
+**Path to project**/lib/javafx-sdk-11.0.2/lib
+--add-modules
+javafx.controls,javafx.fxml
